--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "tsup src/index.tsx --format esm --target node18 --sourcemap",
-    "dev": "tsx src/index.tsx",
+    "dev": "DEV=true tsx src/index.tsx",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/node": "^20.14.12",
     "@types/react": "^18.3.3",
+    "react-devtools-core": "^4.28.5",
     "tsup": "^8.1.0",
     "tsx": "^4.17.0",
     "typescript": "^5.5.4"
